<resources>
    <string name="app_name">FifteenPuzzleGame</string>
    <string name="action_settings">Settings</string>
    <string name="gridSize3x3">3 x 3</string>
    <string name="gridSize4x4">4 x 4</string>
    <string name="gridSize5x5">5 x 5</string>
    <string name="about">About</string>
    <string name="how_to_play">How to Play</string>
    <string name="menu">Menu</string>
    <string name="action_menu">action menu</string>
    <string name="action_pause">action pause</string>
    <string name="time">Time:</string>
    <string name="pause_resume">Pause/Resume</string>
    <string name="action_stats">action_stats</string>
    <string name="moves_zero">Moves: 0</string>
    <string name="action_restart">action_restart</string>
    <string name="move_counter">Moves %d</string>
    <string name="grid_size_3x3">3x3 Grid</string>
    <string name="grid_size_4x4">4x4 Grid</string>
    <string name="grid_size_5x5">5x5 Grid</string>
    <string name="best_time">Best Time</string>
    <string name="win_percentage">Win Percentage</string>
    <string name="games_won">Games Won</string>
    <string name="best_moves">Best Moves</string>
    <string name="games_played">Games Played</string>
    <string name="details">Details</string>
    <string name="grid_3x3">3x3 Grid</string>
    <string name="grid_4x4">4x4 Grid</string>
    <string name="grid_5x5">5x5 Grid</string>
    <string name="select_grid_size">Select Grid Size</string>
    <string name="statistics_title">Statistics</string>
    <string name="fab_message">Fifteen Puzzle Game by Joseph Guindi &amp; Yehoshua Dusowitz</string>
    <string name="grid_size_3x3_desc">grid size 3x3</string>
    <string name="grid_size_4x4_desc">grid size 4x4</string>
    <string name="grid_size_5x5_desc">grid size 5x5</string>
    <string name="back">back</string>
    <string name="grid_size">Grid Size</string>
    <string name="move_counter_description">move counter</string>
    <string name="time_label_description">timer</string>
    <string name="chronometer_description">chronometer</string>
    <string name="auto_save">Auto-Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_title">About the Game</string>

</resources>