<com.google.android.material.bottomappbar.BottomAppBar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/md_theme_primary"
    tools:ignore="BottomAppBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_menu"
            android:padding="16dp"
            android:src="@drawable/ic_home"
            app:tint="@color/md_theme_onPrimary" />

        <!-- Pause Button -->
        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_pause"
            android:padding="16dp"
            android:src="@drawable/ic_pause"
            app:tint="@color/md_theme_onPrimary" />

        <!-- Restart Button -->
        <ImageButton
            android:id="@+id/button_restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_restart"
            android:padding="16dp"
            android:src="@drawable/ic_restart"
            app:tint="@color/md_theme_onPrimary" />

        <!-- Statistics Button -->
        <ImageButton
            android:id="@+id/button_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_stats"
            android:padding="16dp"
            android:src="@drawable/ic_stats"
            app:tint="@color/md_theme_onPrimary" />
    </LinearLayout>

</com.google.android.material.bottomappbar.BottomAppBar>
