<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Select Grid Size"
        app:titleTextColor="@android:color/white" />

    <!-- Grid Size Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Button
            android:id="@+id/grid_size_button_3x3"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/design_default_color_primary"
            android:text="@string/grid_size_3x3"
            android:textSize="18sp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/grid_size_button_4x4"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/grid_size_4x4"
            android:textSize="18sp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/grid_size_button_5x5"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/grid_size_5x5"
            android:textSize="18sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Floating Action Button (FAB) for About -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/about"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:tooltipText="About" />
</androidx.constraintlayout.widget.ConstraintLayout>
